// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`named-amd-module.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
define("foo/title",
    ["my/cart", "my/inventory"],
    function(cart, inventory) {
        //Define foo/title object in here.
   }
)

=====================================output=====================================
define("foo/title", ["my/cart", "my/inventory"], function (cart, inventory) {
  //Define foo/title object in here.
});

================================================================================
`;

exports[`non-amd-define.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
const someVariable = define(
  "some string literal",
  anotherVariable,
  yetAnotherVariable
);

=====================================output=====================================
const someVariable = define(
  "some string literal",
  anotherVariable,
  yetAnotherVariable,
);

================================================================================
`;

exports[`require.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
require(
    [
        'jquery',
        'common/global.context',
        'common/log.event',
        'some_project/square',
        'some_project/rectangle',
        'some_project/triangle',
        'some_project/circle',
        'some_project/star',
    ],
    function($, Context, EventLogger, Square, Rectangle, Triangle, Circle, Star) {

        console.log('some code')
    }
);

define(
    [
        'jquery',
        'common/global.context',
        'common/log.event',
        'some_project/square',
        'some_project/rectangle',
        'some_project/triangle',
        'some_project/circle',
        'some_project/star',
    ],
    function($, Context, EventLogger, Square, Rectangle, Triangle, Circle, Star) {

        console.log('some code')
    }
);

=====================================output=====================================
require([
  "jquery",
  "common/global.context",
  "common/log.event",
  "some_project/square",
  "some_project/rectangle",
  "some_project/triangle",
  "some_project/circle",
  "some_project/star",
], function (
  $,
  Context,
  EventLogger,
  Square,
  Rectangle,
  Triangle,
  Circle,
  Star,
) {
  console.log("some code");
});

define([
  "jquery",
  "common/global.context",
  "common/log.event",
  "some_project/square",
  "some_project/rectangle",
  "some_project/triangle",
  "some_project/circle",
  "some_project/star",
], function (
  $,
  Context,
  EventLogger,
  Square,
  Rectangle,
  Triangle,
  Circle,
  Star,
) {
  console.log("some code");
});

================================================================================
`;
